--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>BioSwaga</title>
-</head>
-<body>
-    <h1>BioSwaga Site is Working!</h1>
-    <p>If you see this, GitHub Pages is working correctly.</p>
-</body>
-</html>
+
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>BioSwaga</title>
+    </head>
+
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+  
